--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "langchain>=1.0.0a4",
     "langchain-anthropic>=0.3.20",
+    "sqlmodel>=0.0.24",
 ]
 
 [dependency-groups]
