--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,19 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "chromadb>=1.1.0",
     "langchain>=1.0.0a4",
     "langchain-anthropic>=0.3.20",
+    "langchain-openai>=0.3.33",
+    "pillow>=11.3.0",
     "sqlmodel>=0.0.24",
 ]
 
 [dependency-groups]
 dev = [
+    "langchain-community>=0.3.29",
     "langsmith>=0.4.27",
+    "pymupdf>=1.26.4",
     "python-dotenv>=1.1.1",
     "ruff>=0.13.0",
 ]
